overflow fixed

--- a/index.css
+++ b/index.css
@@ -87,7 +87,6 @@ h1{
     width: 120px;
     cursor: pointer;
     font-weight: 600;
-    /* color: rgb(76, 76, 76); */
 }
 
 #cash-in{
@@ -115,7 +114,7 @@ h1{
     display: flex;
     padding: 1rem 0;
     border-radius: 5px;
-    overflow-x: scroll;
+
 }
 
 .total-container > div{
@@ -132,7 +131,6 @@ h1{
 }
 
 .total-info > div{
-    /* border: 1px solid; */
     margin-left: 0.8rem;
 }
 
@@ -175,12 +173,11 @@ h1{
     border-radius: 5px;
     margin-bottom: 2rem;
     height: 500px;
-    overflow: scroll;
-    /* scrollbar-width: none; */
+    overflow-y: scroll;
+    scrollbar-width: none;
 }
 
 .head{
-    /* width: max-content; */
     overflow: hidden;
     position: sticky;
     top: 0;
@@ -190,7 +187,6 @@ h1{
 }
 
 .head > p{
-    /* border: 1px solid; */
     margin: 0%;
     padding:1rem;
     color: rgb(0, 0, 0);
@@ -289,7 +285,7 @@ ul{
 }
 
 
-@media (width < 940px){
+@media (width < 954px){
     #transaction-amount{
         margin-top: 1rem;
     }
@@ -298,6 +294,15 @@ ul{
         margin-top: 1rem;
     }
 
+    .table{
+        overflow: scroll;
+        scrollbar-width:thin;
+    }
+
+    .total-container{
+        overflow-x: scroll;
+        scrollbar-width: thin;
+    }
 
 }
 
